--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
       context: ./front-next
       target: runner
     volumes:
-      - .:/app
+      - ./front-next:/app
     command: npm run dev
     ports:
       - "3000:3000"
     environment:
       NODE_ENV: development
+    user: root
