--- a/front-next/Dockerfile
+++ b/front-next/Dockerfile
@@ -20,7 +20,8 @@ WORKDIR /app
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 
-RUN chmod -R 755 /app && addgroup --system --gid 1001 nodejs && adduser --system --uid 1001 nextjs 
+RUN chmod -R 755 /app && addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs 
 
 COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
