--- a/front-next/Dockerfile
+++ b/front-next/Dockerfile
@@ -12,9 +12,7 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
-RUN pwd && ls
-
-RUN yarn build
+RUN npm run build
 
 FROM node:18-alpine AS runner
 WORKDIR /app
