--- a/front-next/Dockerfile
+++ b/front-next/Dockerfile
@@ -12,6 +12,10 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
+RUN export NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+
+RUN export NEXT_PUBLIC_SANITY_PROJECT_ID="i0j3k9o4"
+
 RUN npm run build
 
 FROM node:18-alpine AS runner
