--- a/front-next/package.json
+++ b/front-next/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@heroicons/react": "^2.0.11",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.12.16",
+    "next": "13.4.3",
     "next-sanity": "^0.8.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-icons": "^4.9.0",
     "react-simple-typewriter": "^4.0.2",
     "react-social-icons": "^5.14.0",
-    "sanity": "^3.2.5"
+    "sanity": "^3.2.5",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@types/node": "20.2.3",
@@ -33,8 +35,9 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "tailwind-scrollbar": "^2.0.1"
+    "typescript": "5.0.4"
   }
 }
